--- a/index.html
+++ b/index.html
@@ -53,13 +53,16 @@
       <!-- notre histoire -->
       <section id="histoire" class="contenu_box">
         <!-- Restaurant image -->
-        <img src="images/devanture.jpg" class="histoire_img" alt="Photo de la devanture du restaurant">
+        <div>
+          <img src="images/devanture.jpg" class="histoire_img" alt="Photo de la devanture du restaurant">
+        </div>
         <!-- Texte de présentation -->
         <div class="text histoire">
           <h2>Notre histoire</h2>
           <p>
-            Diététicienne et naturopathe de profession, j'ai toujours souhaitée ouvrir un concept store regroupant mes différents centres d'intêrets. C'est comme cela qu'est né le projet Arteastic.<br>
-            Tout les jours je vous proposerais un plat du jour différents, accompagnés de mes desserts fait maisons et d'une boisson revigorante.<br>
+            Diététicienne et naturopathe de profession, j'ai toujours souhaitée ouvrir un concept store regroupant mes différents centres d'intêrets.<br>
+            C'est comme cela qu'est né le projet Arteastic.<br><br>
+            Tout les jours je vous proposerais un plat du jour différents, accompagnés de mes desserts fait maisons et d'une boisson revigorante.<br><br>
             Présent dans le centre d'Avignon, venez vous ressourcer chez nous tout en admirant notre artiste du moment.
           </p>
         </div>
@@ -77,11 +80,13 @@
           </p>
         </div>
         <!-- produits image -->
-        <img src="images/carbo.jpg" class="histoire_img" alt="Photo d'ingrédient pour des pâtes à la carbonara">
+        <div class="produits_img">
+          <img src="images/carbo.jpg" alt="Photo d'ingrédient pour des pâtes à la carbonara">
+        </div>
       </section>
       
         <!-- Menu de test avec tabulation -->
-      <section id="menu">
+      <section id="menu" class="contenu_box">
         <h2>Notre menu</h2>
         <div class="tab">
           <button class="tablinks" onclick="openCity(event, 'plat')" id="defaultOpen">Plat</button>
@@ -90,33 +95,58 @@
         </div>
 
         <div id="plat" class="tabcontent">
-          <h3>Plat du jour</h3>
-            <p>À partir de 15 €</p>
-            <p>
-              Venait dévouvrir notre plat du jour, confectionné avec amour au petit matin.<br>
-            </p>
-            <h3>Dessert maison</h3>
-            <p>À partir de 5 €</p>
-            <p>Vous pouvez aussi venir déguster nos desserts et nos gâteaux fait maisons.</p>
+          <div class="contenu">
+            <div class="colonne">
+              <h3>Plat du jour</h3>
+              <p class="menu_texte">Venait dévouvrir notre plat du jour, confectionné avec amour au petit matin.<br></p>
+              <p class="menu_prix">17 €*</p>
+            </div>
+            <div class="colonne">
+              <h3>Dessert maison</h3>
+              <p class="menu_texte">Vous pouvez aussi venir déguster nos desserts et nos gâteaux fait maisons.</p>
+              <p class="menu_prix">6 €</p>
+            </div>
+          </div>
         </div>
 
         <div id="boisson" class="tabcontent">
-          <div class="boisson_content">
-            <div>
+          <div class="contenu">
+            <div class="colonne">
               <h3>Boisson chaude</h3>
-              <ul>
-                <li>Expresso</li>
-                <li>Double</li>
-                <li>Cappuccino</li>
-                <li>Macchiato</li>
-                <li>Décaféiné</li>
-                <li>Américain</li>
-                <li>Thés du moment</li>
+              <ul class="menu_list">
+                <li>
+                  <span class="menu_texte">Expresso</span>
+                  <span class="menu_prix">2,50 €</span>
+                </li>
+                <li>
+                  <span class="menu_texte">Double expresso</span>
+                  <span class="menu_prix">3,50 €</span>
+                </li>
+                <li>
+                  <span class="menu_texte">Cappuccino</span>
+                  <span class="menu_prix">5 €</span>
+                </li>
+                <li>
+                  <span class="menu_texte">Macchiato</span>
+                  <span class="menu_prix">5 €</span>
+                </li>
+                <li>
+                  <span class="menu_texte">Décaféiné</span>
+                  <span class="menu_prix">2,50 €</span>
+                </li>
+                <li>
+                  <span class="menu_texte">Américain</span>
+                  <span class="menu_prix">3 €</span>
+                </li>
+                <li>
+                  <span class="menu_texte">Thés du moment</span>
+                  <span class="menu_prix">5 €</span>
+                </li>
               </ul>
             </div>
-            <div>
+            <div class="colonne">
               <h3>Boisson fraîche</h3>
-              <ul>
+              <ul class="menu_list">
                 <li>Eau plate Corse ° St Thomas</li>
                 <li>Eau gazeuse ° Abatille</li>
                 <li>Eau de coco ° 100 % naturelle</li>
@@ -130,34 +160,34 @@
         </div>
 
         <div id="vin" class="tabcontent">
-          <div class="vin_content">
-            <div>
+          <div class="contenu">
+            <div class="colonne">
               <h3>Vins rouge</h3>
-              <ul>
+              <ul class="menu_list">
                 <li>Expresso</li>
                 <li>Double</li>
                 <li>Cappuccino</li>
               </ul>
             </div>
-            <div>
+            <div class="colonne">
               <h3>Vins blanc</h3>
-              <ul>
+              <ul class="menu_list">
                 <li>Eau plate Corse ° St Thomas</li>
                 <li>Eau gazeuse ° Abatille</li>
                 <li>Eau de coco ° 100 % naturelle</li>
               </ul>
             </div>
-            <div>
+            <div class="colonne">
               <h3>Champagnes</h3>
-              <ul>
+              <ul class="menu_list">
                 <li>Eau plate Corse ° St Thomas</li>
                 <li>Eau gazeuse ° Abatille</li>
                 <li>Eau de coco ° 100 % naturelle</li>
               </ul>
             </div>
-            <div>
+            <div class="colonne">
               <h3>Bières</h3>
-              <ul>
+              <ul class="menu_list">
                 <li>Eau plate Corse ° St Thomas</li>
                 <li>Eau gazeuse ° Abatille</li>
                 <li>Eau de coco ° 100 % naturelle</li>
@@ -167,7 +197,7 @@
         </div>
 
       <!-- contact -->
-      </section id="social">
+      </section id="social" class="contenu_box">
         <h3>Rejoignez-nous</h3>
         <div class="social_logos">
           <img src="" alt="Compte facebook Arteastic">
@@ -180,16 +210,13 @@
       </section>
 
       <!-- contact -->
-      <section id="contact">
+      <section id="contact" class="contenu_box">
         <h2>Nous contacter</h2>
 
         <p>Pour toute réservation ou commande veuillez nous contacter au : 06 27 89 65 77</p>
 
         <p>Venez nous passer un coucou à l'adresse suivante : 15 rue de la petite fusterie - 84000 Avignon</p>
         <iframe id="carte" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1436.2350968574476!2d4.80314859276047!3d43.949637279009636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b5eb2c282042a9%3A0x2442e3ccea0480e3!2sArteastic!5e0!3m2!1sfr!2sfr!4v1608387564301!5m2!1sfr!2sfr" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-
-
-        
 
       </section>
 
