Reprise du projet

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <nav id="navigation">
         <ul>
           <li>
+            <a href="#presentation"><img src="images/logo.png" alt="logo Arteastic"></a>
+          </li>
+          <li>
             <a href="#presentation">Accueil</a>
           </li>
           <li>
@@ -26,9 +29,6 @@
             <a href="#menu">Menu</a>
           </li>
           <li>
-            <a href="#social">Réseaux social</a>
-          </li>
-          <li>
             <a href="#contact">Contact</a>
           </li>
         </ul>
@@ -38,10 +38,9 @@
     <!-- présentation -->
     <section id="presentation">
       <div class="pres_texte">
-        <img src="images/logo.png" alt="logo Arteastic">
         <h2>Restaurant ° Galerie d'arts ° Épicerie fine</h2>
         <p>
-          15 rue de la petite fusterie - 84000 Avignon<br>
+          15 rue de la petite fusterie, Avignon<br>
           Ouverts du Mardi au Samedi - 10h / 18h.
         </p>
       </div>
